<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="quyntg.vn.session21_quizzemall.SettingScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->
        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/sound_effects"
            android:theme="@style/Switch" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/music"
            android:theme="@style/Switch" />

        <TextView
            android:id="@+id/tv_gen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="20dp"
            android:text="@string/generation"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <RelativeLayout
                android:id="@+id/gen1"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_gen1"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/gen_1"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_gen1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#88FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gen2"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/gen1"
                android:background="@drawable/background_gen2"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/gen_2"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_gen2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#88FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gen3"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_below="@+id/gen1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_gen3"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/gen_3"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_gen3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#88FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gen4"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_below="@+id/gen2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/gen3"
                android:background="@drawable/background_gen4"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/gen_4"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_gen4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#88FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gen5"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_below="@+id/gen3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_gen5"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/gen_5"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_gen5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#88FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gen6"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_below="@+id/gen4"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/gen5"
                android:background="@drawable/background_gen6"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/gen_6"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_gen6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#88FFFFFF" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
