<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="quyntg.vn.session21_quizzemall.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/v_red"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/red">

            <TextView
                android:id="@+id/tv_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/name"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:textSize="25sp"/>
            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_settings_black_24dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="60dp"
                    android:textColor="#FFFFFF"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/tv_hscore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_score"
                    android:text="@string/highscore"
                    android:textSize="30dp"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#000000"/>
        <RelativeLayout
            android:id="@+id/v_white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#FFFFFF">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/copyright"/>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_play"
        android:background="@drawable/button_play"
        app:layout_anchor="@id/v_red"
        app:layout_anchorGravity="bottom|center"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</android.support.design.widget.CoordinatorLayout>
